# agent-benchmark

./: .gitignore  README.md  expected_outcome.json  package-lock.json  package.json  run_matrix.sh  run_single.sh  seed.json  summarize_results.py  validate_result.py
browser-use-agent/: README.md  pyproject.toml  run_browser_agent.py
react-admin-setup/: README.md  data-generator.patch  index.ts.original  index.ts.patched
reflex-admin/: .gitignore  README.md  requirements.txt  run_api_agent.py  rxconfig.py
reflex-admin/reflex_admin/: __init__.py  data.py  layout.py  reflex_admin.py  state.py
reflex-admin/reflex_admin/pages/: __init__.py  customers.py  orders.py  reviews.py
results/: api_haiku.json  api_haiku_1.json  api_haiku_2.json  api_haiku_3.json  api_haiku_4.json  api_haiku_5.json  api_sonnet.json  api_sonnet_1.json  api_sonnet_2.json  api_sonnet_3.json  api_sonnet_4.json  api_sonnet_5.json  browser_haiku_no_vision.json  browser_haiku_vision.json  browser_sonnet.json  browser_sonnet_1.json  browser_sonnet_2.json  browser_sonnet_3.json
