[project]
name = "browser-use-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    "langchain-anthropic>=1.3.1",
    "python-dotenv>=1.2.1",
]

# Force patched versions of transitive deps that browser-use 0.12.6
# hard-pins (e.g. `requests==2.32.5`). These are minor/patch bumps that
# clear Dependabot CVEs and that we've smoke-tested as compatible with
# browser-use. Drop entries here as upstream catches up.
[tool.uv]
override-dependencies = [
    "aiohttp>=3.13.4",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]
